<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Gradient background -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/create_event_bg"
        android:padding="24dp">

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:text="Create Event"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <!-- Image and "Change Photo" Button -->

        <!-- Event Name Input -->

        <ImageView
            android:id="@+id/imageViewEventImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_bg"
            android:clipToOutline="true"

            android:scaleType="centerCrop"
            android:src="@drawable/event1" />

        <Button
            android:id="@+id/buttonUploadImage"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/purple"
            android:paddingTop="8dp"
            android:text="Change Photo"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:hint="Event Name"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <!-- Facility Input -->
        <EditText
            android:id="@+id/editTextCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Capacity"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="number"
            android:padding="5dp"
            android:layout_marginTop="10dp" />

        <!-- Category Input -->
        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:padding="5dp"
            android:layout_marginTop="10dp" />

        <!-- Date of Event Input -->
        <EditText
            android:id="@+id/editTextEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Date (e.g., YYYY-MM-DD)"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="none"
            android:padding="5dp"
            android:layout_marginTop="10dp" />

        <!-- Limit Waitlist Input -->
        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:padding="5dp"
            android:layout_marginTop="10dp" />
        <!-- Limit Waitlist Input -->
        <EditText
            android:id="@+id/editTextLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Limit Waitlist"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:padding="5dp"
            android:layout_marginTop="10dp" />

        <!-- Radio Button for geolocation needed not needed -->
        <!-- Geolocation Radio Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Geolocation needed:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radioGroupGeolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="No"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>
        <!-- Create Button -->
        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/purple"
            android:text="Create"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>