...
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:paddingBottom="16dp"
            android:text="Event QR Code "
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/imageViewQRCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewQRCode"
...
