<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_background">

    <!-- Search Bar -->
    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner_background"
        android:drawableEnd="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="Search"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#4F4E4E" />

    <!-- NestedScrollView for RecyclerView -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchBar"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:clipToPadding="false" />

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
